--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guillermo S. Fuentes Jaque</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <script src="script.js"></script>
