--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
         <section id="projects">
             <!-- Projects will be added here with JavaScript -->
         </section>
+
+        <section id="publications">
+            <!-- Publications will be added here with JavaScript -->
+        </section>
     </main>
     <footer id="footer">
         <!-- Contact information will be added here with JavaScript -->
