--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Guillermo S. Fuentes Jaque</title>
+    <link rel="apple-touch-icon" sizes="76x76" href="IMG/apple-icon-76x76.png">
     <link rel="stylesheet" type="text/css" href="styles/styles.css">
     <script src="script/main.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
